--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,22 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="small_spacing">10dp</dimen>
+    <dimen name="micro_spacing">3dp</dimen>
 
     <dimen name="token_card_height">100dp</dimen>
-    <dimen name="token_card_name_start_padding">5dp</dimen>
+    <dimen name="token_card_name_start_padding">10dp</dimen>
     <dimen name="token_card_name_end_padding">5dp</dimen>
+    <dimen name="token_card_content_end_padding">15dp</dimen>
+    <dimen name="token_card_content_start_padding">15dp</dimen>
 
     <dimen name="home_screen_header_bottom_padding">5dp</dimen>
+    <dimen name="home_screen_header_top_padding">5dp</dimen>
+    <dimen name="home_screen_header_start_padding">15dp</dimen>
+    <dimen name="home_screen_header_end_padding">15dp</dimen>
 
     <dimen name="asset_card_height">100dp</dimen>
-    <dimen name="asset_card_name_start_padding">5dp</dimen>
+    <dimen name="asset_card_name_start_padding">10dp</dimen>
     <dimen name="asset_card_name_end_padding">5dp</dimen>
+    <dimen name="asset_card_content_start_padding">15dp</dimen>
+    <dimen name="asset_card_content_end_padding">15dp</dimen>
 
     <dimen name="portfolio_screen_header_bottom_padding">5dp</dimen>
+    <dimen name="portfolio_screen_header_top_padding">5dp</dimen>
+    <dimen name="portfolio_screen_header_start_padding">15dp</dimen>
+    <dimen name="portfolio_screen_header_end_padding">15dp</dimen>
+    <dimen name="portfolio_screen_spacer_height">50dp</dimen>
     <dimen name="add_new_asset_button_bottom_padding">15dp</dimen>
 
+    <dimen name="portfolio_balance_start_padding">15dp</dimen>
+    <dimen name="portfolio_balance_top_padding">15dp</dimen>
+    <dimen name="portfolio_balance_bottom_padding">25dp</dimen>
+    <dimen name="portfolio_balance_title_bottom_padding">10dp</dimen>
+
     <dimen name="new_asset_card_height">100dp</dimen>
-    <dimen name="new_asset_card_name_start_padding">5dp</dimen>
+    <dimen name="new_asset_card_name_start_padding">10dp</dimen>
     <dimen name="new_asset_card_name_end_padding">5dp</dimen>
     <dimen name="new_asset_card_add_width">70dp</dimen>
     <dimen name="new_asset_card_add_border_width">60dp</dimen>
@@ -43,5 +60,7 @@
     <dimen name="details_screen_section_title_top_padding">20dp</dimen>
     <dimen name="details_screen_surface_percentage_width">85dp</dimen>
     <dimen name="details_screen_surface_corner">10dp</dimen>
+
+    <dimen name="image_size">30dp</dimen>
 
 </resources>
